feat-minor : user reset password implemented
