# routes/api.php
@@ -11,6 +11,8 @@ use Illuminate\Support\Facades\Route;
 Route::controller(AuthController::class)->group(function(){
     Route::post('/register','register');
     Route::post('/login','login');
+    Route::post('/password/email','sendResetLinkEmail');
+    Route::post('/password/reset','reset')->name('password.reset');
 })->middleware('force-json');
 
 
@@ -39,4 +41,3 @@ Route::middleware(['auth:sanctum'])->group(function () {
     });
 });
     
-
